# projector

./: .output.txt  Cargo.toml  README.md
docs/: idea.md
src/: main.rs
src/wizard/: config.rs  context.rs  llm.rs  mod.rs  output.rs  question.rs  session.rs  template.rs
