[package]
name = "Projector"
version = "0.1.0"
edition = "2024"
description = "LLM-Powered Dynamic Project Definition Wizard"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
async-openai = "0.14"
markdown = "0.3"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "5.0"
date = "0.1.3"
